# tenflix-ml

./: .env.example  TenFlix_v1.ipynb  TenFlix_v3.ipynb  TenFlix_v4.ipynb  handover.md  package.json  pyproject.toml  ratings-preview.json  readme.md
.ipynb_checkpoints/: TenFlix_v1-checkpoint.ipynb  TenFlix_v2-checkpoint.ipynb
apps/web/: .env.example  next.config.ts  package.json  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: auth-gate.tsx  auth-provider.tsx  movie-card.tsx  nav.tsx  providers.tsx  rating-dock.tsx  toast-provider.tsx  watch-actions.tsx
configs/: v3.yaml  v4.yaml
db/migrations/: 001_web_app.sql  002_web_rls_lockdown.sql  003_web_query_indexes.sql
docs/: web-app-upgrade.md
src/tenflix/: __init__.py  artifacts.py  cli.py  config.py  data.py  evaluation.py  models.py  pipeline.py  recommender.py  types.py
src/tenflix/v4/: __init__.py  artifacts.py  auth.py  candidates.py  cli.py  config.py  content.py  data.py  enrichment.py  evaluation.py  events.py  matrix_factorization.py  pipeline.py  profiles.py  recommender.py  repositories.py  reranker.py  runtime_env.py  service.py  web_repositories.py  web_service.py  web_types.py
tests/: conftest.py  test_data.py  test_evaluation.py  test_metrics.py  test_model_and_recommendation.py
tests/v4/: __init__.py  conftest.py  test_artifacts_and_evaluation.py  test_cli_web_db.py  test_config.py  test_events_and_profiles.py  test_matrix_factorization.py  test_recommendation_service.py  test_web_upgrade.py
(+10 files in other folders)
