[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenflix"
version = "4.0.0"
description = "Live rating-aware, lifecycle and recency-aware movie recommendations"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4,<2",
  "numba>=0.61,<1",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17,<21",
  "PyYAML>=6,<7",
  "scikit-learn>=1.5,<2",
  "scipy>=1.14,<2",
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "httpx2>=2,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "PyJWT>=2.10,<3",
  "pytest>=8,<10",
  "ruff>=0.15,<1",
  "uvicorn>=0.34,<1",
]
service = ["fastapi>=0.115,<1", "pydantic>=2.10,<3", "uvicorn>=0.34,<1"]
web = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "PyJWT>=2.10,<3",
  "uvicorn>=0.34,<1",
]

[project.scripts]
tenflix = "tenflix.cli:main"
tenflix-v4 = "tenflix.v4.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tenflix.v4" = ["default.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
